--- a/test/YoloDev.PartialJson.Test/YoloDev.PartialJson.Test.csproj
+++ b/test/YoloDev.PartialJson.Test/YoloDev.PartialJson.Test.csproj
@@ -1,7 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.1</TargetFramework>
+    <TargetFrameworks>netcoreapp1.1;net461</TargetFrameworks>
+    <TargetFrameworks Condition=" '$(OS)' != 'Windows_NT' ">netcoreapp1.1</TargetFrameworks>
+    <DebugType>Full</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
