Improve proxy generation

--- a/test/YoloDev.PartialJson.Test/YoloDev.PartialJson.Test.csproj
+++ b/test/YoloDev.PartialJson.Test/YoloDev.PartialJson.Test.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFrameworks>netcoreapp1.1;net461</TargetFrameworks>
     <TargetFrameworks Condition=" '$(OS)' != 'Windows_NT' ">netcoreapp1.1</TargetFrameworks>
-    <DebugType>Full</DebugType>
+    <DebugType>embedded</DebugType>
   </PropertyGroup>
 
   <ItemGroup>
