--- a/src/YoloDev.PartialJson/YoloDev.PartialJson.csproj
+++ b/src/YoloDev.PartialJson/YoloDev.PartialJson.csproj
@@ -12,5 +12,6 @@
     <PackageReference Include="Castle.Core" Version="4.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="System.Collections.Immutable" Version="1.3.1" />
+    <PackageReference Include="System.ValueTuple" Version="4.3.1" />
   </ItemGroup>
 </Project>
